release 1.12
- Fixed issue 830
  http://java.net/jira/browse/JERSEY-830
  Fixed issue with WADL generation when dealing with nested generic types; added check before trying to cast Type to Class
- Fixed issue 874
  http://java.net/jira/browse/JERSEY-874
  Added "throws ClientHandlerException" to all methods declared in UniformInterface, same for its successors.
- Fixed issue 883 
  http://java.net/jira/browse/JERSEY-883
  Improved support for CDI Bean manager lookup
- Fixed issue 943
  http://java.net/jira/browse/JERSEY-943
  Fixed archetype jersey-quickstart-grizzly2.
- Fixed issue 907
  http://java.net/jira/browse/JERSEY-906
  Modified documentation (user guide) to reflect current implementation (client filter execution order).
- Fixed issue 906
  http://java.net/jira/browse/JERSEY-906
  Added missing grizzly-framework-2.1.2.jar file to the list of jars 'Non-maven developers require:' in getting-started guide
- Fixed issue 902
  http://java.net/jira/browse/JERSEY-902
  Fix broken links to JSR311 Javadocs in Overview of JAX-RS 1.1.1 chapter of Jersey User Guide.
- Fixed issue 840
  http://java.net/jira/browse/JERSEY-840
  Added jersey-grizzly2.jar to list required for non-maven developers to fix broken Getting Started section in the Jersey User Guide.
- Grizzly 2 version update (to 2.2.1)
- Fixed issue 898
  http://java.net/jira/browse/JERSEY-898
  Added missing null checks to ContainerRequest.evaluatePreconditions(Date | EntityTag)
- Fixed issue 876
  http://java.net/jira/browse/JERSEY-876
  Adapted to recent change in Grizzly 1.x API.

release 1.11 (12-2011)
- Fixed issue 875
  http://java.net/jira/browse/JERSEY-875
  Fixed broken jersey-quickstart-ejb archetype, removed jaxb dependency from pom, it's not required.
- Fixed issue 838
  http://java.net/jira/browse/JERSEY-838
  Fixed broken jersey-quickstart-grizzly2 archetype, added missing dependency to pom and corrected package import.
- Fixed issue 849
  http://java.net/jira/browse/JERSEY-849